Revert "#4047 Account icon is shifted left on checkout "

--- a/packages/scandipwa/src/component/Header/Header.style.scss
+++ b/packages/scandipwa/src/component/Header/Header.style.scss
@@ -447,6 +447,6 @@
 
     &-MyAccountContainer {
         display: flex;
-        margin-inline-start: auto;
+        margin-inline-start: 40px;
     }
 }
